fix: Correcoes finais

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="A melhor plataforma para visualizar informações sobre livros. Entre agora e descubra novas indicações de literaturas para você!"
+      content="Bem-vindo à Adapto, sua plataforma para conectar refugiados e empresas."
     />
 
     <title>Adapto</title>
